codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__unified_exec_waiting_multiple_empty_after.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 4108
expression: combined
---
• Waited for background terminal · just fix
