codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__windows_sandbox_required_enable_prompt.snap
---
source: tui/src/chatwidget/tests/permissions.rs
assertion_line: 430
expression: "render_bottom_popup(&chat, 120)"
---
› Ask Codex to do anything

  gpt-5.5 default · /tmp/project
