codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__windows_sandbox_required_fallback_prompt.snap
---
source: tui/src/chatwidget/tests/permissions.rs
assertion_line: 533
expression: popup
---
› Ask Codex to do anything

  gpt-5.5 default · /tmp/project
